# PRC

./: CITATION.cff  Cargo.toml  Dockerfile  LICENSE  README.md  THIRD_PARTY_LICENSES.md  bench_run_all.sh  makefile
.cargo/: config.toml
measurements/: PCR_plots.py  PIR_comparison_plot.py  README.md  bench.sh
measurements/raw data/: measure_delay_tcp_rtt_20ms.csv  measure_delay_tcp_rtt_40ms.csv  measure_delay_tcp_rtt_80ms.csv
src/: cor_rnd.rs  lib.rs  main.rs  prc.rs  simd_array.rs
src/cor_rnd/: beaver.rs  dabit.rs  sharing.rs
src/prc/: b2a_conv.rs  client.rs  commitment.rs  config.rs  connection.rs  db.rs  layer.rs  mpc.rs  server.rs  util.rs
src/simd_array/: aligned_array.rs  bit_array.rs  d2_bit_array.rs
tests/: integration_test.rs
