[package]
name = "priv-rec-cert"
version = "0.2.1"
edition = "2024"

[dependencies]
rand = "0.8.5"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.88"
futures = "0.3"
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.0", features = ["derive"] }
libc = "0.2.172"
curve25519-dalek = {version= "4.2.0", features = ["rand_core", "digest"] }
once_cell = "1.21.3"
sha2 = "0.10.9"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }


[profile.release-with-debug]
inherits = "release"
debug = true

